Fix alignment issue with oneColumn mode

--- a/app/src/webviews/less/blueline.less
+++ b/app/src/webviews/less/blueline.less
@@ -205,7 +205,9 @@ html.grids {
 			}
 		}
 	}
-
+	body.oneColumn {
+		padding-left: 0;
+	}
 	body.oneRow {
 		text-align: left;
 		h1 {
